[project]
name = "qwen2-vllm-repro"
version = "0.1.0"
description = "Add your description here"
dependencies = [
  "typer>=0.12.3",
  "torch==2.4.0",
  "vllm==0.5.4",
  "transformers",
  "optimum",
  "auto-gptq",
  "exllamav2",
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.rye]
managed = true
virtual = true
dev-dependencies = ["ruff>=0.5.6", "mypy>=1.11.1", "setuptools>=72.1.0"]

[tool.ruff]
extend-include = ["*.ipynb"]
extend-exclude = ["*.pyi", ".virtual_documents/**/*"]
line-length = 119
indent-width = 4
target-version = "py310"
builtins = ["typing_extensions"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "SIM", "I"]
