[project]
name = "transformers"
version = "0.1.0"
description = "Add your description here"
dependencies = [
  "transformers>=4.43.3",
  "optimum",
  "auto-gptq",
  "exllamav2",
  "typer>=0.12.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
